# sandbox-deepbook

./: .gitignore  PLAN.md  README.md
backend/: .env.example  .gitignore  Cargo.toml  README.md
backend/data/: deep_usdc_state_cp240M.jsonl  sui_usdc_state_cp240M.jsonl  wal_usdc_state_cp240M.jsonl
backend/docs/: DEEPBOOK_STATE_LOADING.md  SNOWFLAKE_OPTIMIZATION_PROPOSAL.md
backend/examples/: full_deepbook_flow.rs  test_all_pools_240m.rs  test_orderbook.rs  test_swap_simulation.rs
backend/scripts/: assemble_state.py  export_complete_snapshot.py  export_deep_usdc_240m.py  export_pool_state.py  export_pools.py  export_state_240m.py  export_wal_usdc_240m.py  export_wal_usdc_complete.py  fetch_state_data.py  fetch_state_efficient.py  run_state_queries.py  verify_orderbook.sh
backend/sql/: export_deepbook_state.sql
backend/src/: lib.rs  main.rs
backend/src/api/: balance.rs  debug.rs  mod.rs  orderbook.rs  session.rs  swap.rs  system.rs
backend/src/sandbox/: mod.rs  orderbook_builder.rs  router.rs  snowflake_bcs.rs  state_loader.rs  swap_executor.rs
backend/src/types/: mod.rs
contracts/router/: Move.toml
contracts/router/sources/: debug_token.move  router.move
docs/: ARCHITECTURE.md  DEEPBOOK_STATE_OBJECTS.md  RUNBOOK.md  SNOWFLAKE_FINDINGS.md  STATE_HYDRATION_ANALYSIS.md
frontend/: DESIGN.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActivityFeed.tsx  DebugPoolPanel.tsx  FaucetModal.tsx  Header.tsx  OrderBook.tsx  PTBModal.tsx  SwapCard.tsx
(+6 files in other folders)
