[package]
name = "deepbook-sandbox-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcs = "0.1"
base64 = "0.22"
hex = "0.4"

# Sui sandbox for Move VM execution
sui-sandbox-core = { git = "https://github.com/Evan-Kim2028/sui-sandbox", package = "sui-sandbox-core" }
sui-transport = { git = "https://github.com/Evan-Kim2028/sui-sandbox", package = "sui-transport" }

# Move types (pinned to match sui-sandbox)
move-core-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-core-types" }
move-binary-format = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-binary-format" }

# Async
anyhow = "1"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
dotenvy = "0.15"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[[example]]
name = "test_orderbook"
path = "examples/test_orderbook.rs"

